x-axis no longer being truncated. Clicking on a bar doesn't cause a filter

--- a/dashboard-ui/src/components/SurveyResults/surveyResults.css
+++ b/dashboard-ui/src/components/SurveyResults/surveyResults.css
@@ -59,17 +59,21 @@
 .singletons {
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
-    flex-flow: wrap;
+    flex-wrap: wrap;
+    justify-content: space-between;
 }
 
-.singletons>* {
-    width: 50%;
-    border-right: 1px solid black;
-    padding: 8px;
+.singletons > * {
+    width: calc(50% - 1px);
+    box-sizing: border-box;
+    padding: 10px;
 }
 
-.singletons>*:last-child {
+.singletons > *:nth-child(odd) {
+    border-right: 2px solid black;
+}
+
+.singletons > *:last-child:nth-child(odd) {
     border-right: none;
 }
 
@@ -84,6 +88,7 @@
 
 .sa-question-layouted {
     width: 100%;
+    overflow: visible;
 }
 
 .sa-toolbar {
@@ -153,7 +158,7 @@
     color: white;
 }
 
-.table-modal>.modal-body {
+.table-modal > .modal-body {
     background-color: white;
     margin: 20px 14px auto 14px;
     width: calc(100% - 28px);
@@ -194,4 +199,16 @@
 
 .selection-section .scenario-list {
     max-height: 500px !important;
+}
+
+@media (max-width: 1200px) {
+    .singletons > * {
+        width: 100%;
+        border-right: none !important;
+        border-bottom: 2px solid black;
+    }
+    
+    .singletons > *:last-child {
+        border-bottom: none;
+    }
 }
